# video_compact

./: .gitignore  README.md  autotune.py  benchmark.py  main.py  pyproject.toml  web_app.py
scripts/: install_ffmpeg_libvmaf.sh
tests/: test_autotune.py  test_benchmark_runner.py  test_vmaf_modes.py
